--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,13 +6,13 @@
   "image": "mcr.microsoft.com/devcontainers/base:bookworm",
 
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-  "remoteUser": "root",
+  "remoteUser": "node",
 
   "containerEnv": {
     "PNPM_HOME": "/pnpm"
   },
 
-  "postCreateCommand": "bash -i -c 'nvm install --lts && pnpm install && (cd integrations/dotnet)'",
+  "postCreateCommand": "su node -c 'nvm install --lts && pnpm install'",
 
   // Features to add to the dev container. More info: https://containers.dev/features.
   "features": {
