--- a/package.json
+++ b/package.json
@@ -13,26 +13,14 @@
     "format:fix": "pnpm run -r --if-present format:fix && biome format --write .",
     "code-static:check": "pnpm run lint:check && pnpm run format:check",
     "code-static:fix": "pnpm run lint:fix && pnpm run format:fix",
-    "prepare": "husky"
+    "chore:update": "corepack use pnpm@latest && pnpm -r update"
   },
   "dependencies": {
     "@biomejs/biome": "1.9.4",
     "@changesets/cli": "^2.27.11",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
+    "@typespec/compiler": "^0.63.0",
     "rimraf": "^6.0.1",
     "wireit": "^0.14.9"
-  },
-  "devDependencies": {
-    "@typespec/compiler": "^0.63.0"
-  },
-  "lint-staged": {
-    "!definitions/**/*": "pnpm run code-static:fix",
-    "definitions/**/*": [
-      "sh -c 'pnpm run build'",
-      "pnpm run code-static:fix",
-      "git add integrations/*"
-    ]
   },
   "wireit": {
     "build": {
@@ -44,5 +32,5 @@
       ]
     }
   },
-  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
