--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Require updated integrations
         run: |
           if [ `git status --porcelain=1 | wc -l` -ne 0 ]; then
+            git status --porcelain=1;
             exit 1;
           fi
 
