--- a/.github/actions/prepare/install/action.yml
+++ b/.github/actions/prepare/install/action.yml
@@ -35,6 +35,16 @@ runs:
       working-directory: ${{ inputs.working-directory }}
       run: echo ${{ github.ref }}
 
+    - name: Nx Cache
+      id: nx-cache
+      uses: actions/cache@v4
+      with:
+        path: .nx/cache
+        key: nx-${{ github.ref_name }}-${{ github.sha }}
+        restore-keys: |
+          nx-${{ github.ref_name }}-
+          nx-
+
     - name: ".NET: install .NET Core"
       if: ${{ inputs.install-dotnet == 'true' }}
       uses: actions/setup-dotnet@v4
@@ -66,10 +76,6 @@ runs:
         registry-url: ${{ inputs.node-registry-url }}
       env:
         HUSKY: "0"
-
-    - name: "node.js: setup wireit cache"
-      uses: google/wireit@setup-github-actions-caching/v2
-      if: ${{ inputs.install-node == 'true' }}
 
     - name: "node.js: install pnpm dependencies"
       if: ${{ inputs.install-node == 'true' }}
