--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -1,19 +1,25 @@
-name: Release
+name: CI - Release
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - development
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref_name }}
 
 env:
   NUGET_DIRECTORY: ${{ github.workspace}}/nuget
   NUGET_PUSH_SERVER: https://api.nuget.org/v3/index.json
 
 jobs:
+  code-quality:
+    uses: ./.github/workflows/quality.yml
+
   release:
     name: Release
+    needs: [code-quality]
 
     runs-on: ubuntu-latest
 
@@ -21,7 +27,7 @@ jobs:
       published: ${{ steps.changesets.outputs.published }}
       published-packages: ${{ steps.changesets.outputs.publishedPackages  }}
       publish-npm: ${{ steps.changesets.outputs.published }}
-      publish-dotnet: ${{ steps.changesets.outputs.published }}
+      ci_dotnet: ${{ steps.changesets.outputs.published }}
 
     permissions:
       pages: read
@@ -33,22 +39,6 @@ jobs:
       security-events: write
 
     steps:
-      - uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.LADESA_BOT_ID }}
-          private-key: ${{ secrets.LADESA_BOT_SECRET }}
-
-      - name: Get GitHub App User ID
-        id: get-user-id
-        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
-        env:
-          GH_TOKEN: ${{ steps.app-token.outputs.token }}
-
-      - run: |
-          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
-          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>'
-
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
@@ -75,7 +65,7 @@ jobs:
           NPM_CONFIG_PROVENANCE: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  outputs:
+  ci_outputs:
     name: Show the release job outputs
     runs-on: ubuntu-latest
     needs: [release]
@@ -84,12 +74,12 @@ jobs:
       - name: print outputs (for debug purposes only)
         run: echo '${{ toJSON(needs.release.outputs) }}'
 
-  publish-dotnet:
+  ci_dotnet:
     name: Publish to the NuGet registry
     runs-on: ubuntu-latest
 
     needs: [release]
-    if: needs.release.outputs.published == 'true' && needs.release.outputs.publish-dotnet == 'true'
+    if: needs.release.outputs.published == 'true' && needs.release.outputs.ci_dotnet == 'true'
 
     steps:
       - name: Checkout code
@@ -102,7 +92,7 @@ jobs:
           nuget-push-server: "${{ env.NUGET_PUSH_SERVER }}"
           nuget-token: "${{ secrets.NUGET_TOKEN }}"
 
-  publish-npm:
+  ci_npm:
     name: Publish to the NPM registry
     runs-on: ubuntu-latest
 
@@ -118,32 +108,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Extract tag
+        id: extract-tag
+        run: |
+          TAG=latest
+          FILE=.changeset/pre.json
+
+          if [ -f ${FILE} ]; then
+            TAG=$(cat ${FILE} | jq .tag);
+          fi
+
+          echo tag: ${TAG}
+
+          echo "TAG=${TAG}" >> $GITHUB_OUTPUT
+
       - name: Publish to the NPM registry
         uses: ./.github/actions/publish/npm
         with:
+          tag: "${{ steps.extract-tag.outputs.tag }}"
           npm-token: "${{ secrets.NPM_TOKEN }}"
-
-  edge-publish-npm:
-    name: Edge NPM package publish
-    runs-on: ubuntu-latest
-
-    needs: [release]
-    if: needs.release.outputs.published == 'false'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install
-        uses: ./.github/actions/prepare/install
-        with:
-          install-node: "true"
-          install-dotnet: "true"
-
-      - name: Build
-        uses: ./.github/actions/prepare/build
-        with:
-          workspace-build: "true"
-
-      - name: "Continuos Release: publish to pkg.pr.new"
-        run: pnpx pkg-pr-new publish --comment=update './integrations/npm/especificacao'
