--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,11 +1,17 @@
-name: Code Quality
+name: Check Code Quality
 
 on:
+  workflow_call:
+  workflow_dispatch:
   pull_request:
+    branches: development
+  push:
+    branches: development
+  schedule:
+    - cron: "0 9 * * 3"
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  group: code-quality-${{ github.sha }}
 
 jobs:
   quality:
@@ -23,10 +29,16 @@ jobs:
         uses: ./.github/actions/prepare/install
         with:
           install-node: "true"
-          install-dotnet: "true"
 
-      - name: The build should work
-        run: pnpm run -w build;
+      - name: "generate:all should work"
+        uses: ./.github/actions/prepare/generate
+        with:
+          workspace-generate: "true"
+
+      - name: "build:all should work"
+        uses: ./.github/actions/prepare/build
+        with:
+          workspace-build: "true"
 
       - name: Require to pass static code check
         run: |
