--- a/definitions/package.json
+++ b/definitions/package.json
@@ -4,64 +4,19 @@
   "type": "module",
   "version": "3.3.0",
   "scripts": {
-    "watch": "wireit",
-    "cleanup": "wireit",
-    "build": "wireit",
-    "build:json-schema": "wireit",
-    "format:check": "wireit",
-    "format:fix": "wireit",
-    "lint:fix": "wireit",
-    "code-static:check": "wireit",
-    "code-static:fix": "wireit"
+    "watch": "tsp compile src/main.tsp --config tspconfig.json-schema.yaml --output-dir '.generated' --watch",
+    "cleanup": "rimraf .generated",
+    "build": "nx run build",
+    "build:json-schema": "nx run build:json-schema",
+    "lint:check": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "format:check": "tsp format --check src/**/*.tsp && biome format .",
+    "format:fix": "tsp format src/**/*.tsp && biome format --write .",
+    "code-static:check": "pnpm run lint:check && pnpm run format:check",
+    "code-static:fix": "pnpm run lint:fix && pnpm run format:fix"
   },
   "devDependencies": {
     "@typespec/compiler": "^0.63.0",
-    "@typespec/json-schema": "^0.63.0",
-    "wireit": "^0.14.9"
-  },
-  "wireit": {
-    "cleanup": {
-      "command": "rimraf .generated",
-      "files": [
-        ".generated"
-      ]
-    },
-    "build:json-schema": {
-      "command": "tsp compile src/main.tsp --config tspconfig.json-schema.yaml --output-dir '.generated'",
-      "files": [
-        "src/**/*",
-        "tspconfig.json-schema.yaml"
-      ],
-      "output": [
-        ".generated/json-schema/**/*"
-      ]
-    },
-    "build": {
-      "command": "pnpm run build:json-schema && pnpm run format:fix",
-      "dependencies": [
-        "cleanup"
-      ]
-    },
-    "watch": {
-      "command": "tsp compile src/main.tsp --config tspconfig.json-schema.yaml --output-dir '.generated' --watch"
-    },
-    "lint:check": {
-      "command": "biome lint ."
-    },
-    "lint:fix": {
-      "command": "biome lint --write ."
-    },
-    "format:check": {
-      "command": "tsp format --check src/**/*.tsp && biome format ."
-    },
-    "format:fix": {
-      "command": "tsp format src/**/*.tsp && biome format --write ."
-    },
-    "code-static:check": {
-      "command": "pnpm run lint:check && pnpm run format:check"
-    },
-    "code-static:fix": {
-      "command": "pnpm run lint:fix && pnpm run format:fix"
-    }
+    "@typespec/json-schema": "^0.63.0"
   }
 }
