chore(biome): ignore .nx

--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,12 @@
   "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
   "files": {
     "ignoreUnknown": true,
-    "ignore": [".archived", "definitions", "integrations/npm/especificacao"]
+    "ignore": [
+      ".archived",
+      ".nx",
+      "definitions",
+      "integrations/npm/especificacao"
+    ]
   },
   "formatter": {
     "enabled": true,
