--- a/biome.json
+++ b/biome.json
@@ -2,12 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
   "files": {
     "ignoreUnknown": true,
-    "ignore": [
-      ".archived",
-      ".nx",
-      "definitions",
-      "integrations/npm/especificacao"
-    ]
+    "ignore": [".archived", ".nx", "definitions", "integrations/npm/especificacao", "**/dist/**/*"]
   },
   "formatter": {
     "enabled": true,
