chore(ci-release): changesets setupGitUser

--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -54,7 +54,7 @@ jobs:
         uses: changesets/action@v1
         id: changesets
         with:
-          setupGitUser: false
+          setupGitUser: true
           createGithubReleases: false
           title: "chore: version packages"
           commit: "chore: version packages"
