chore(.github/actions/publish/dotnet): workspace-build: true

--- a/.github/actions/publish/dotnet/action.yml
+++ b/.github/actions/publish/dotnet/action.yml
@@ -33,7 +33,7 @@ runs:
     - name: Build
       uses: ./.github/actions/prepare/build
       with:
-        integrations-dotnet-build: "true"
+        workspace-build: "true"
 
     - name: Pack
       shell: bash
